test_compiler/errors/e27.gm
Proc p() : Int {
    Return True;  // ERROR_RETURN_MISMATCH
}
Proc q() : Int {
    Return ;   // ERROR_NO_VOID_RETURN
}
Proc r() {
    Return 1; // ERROR_RETURN_FOR_VOID
}
